# parlor

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
node-service/: package-lock.json  package.json  playwright.config.js  server.js
node-service/e2e/: smoke.spec.js
node-service/src/: app.js  config.js  env.js  gemma.js  litert.js  localGemma.js  ollama.js  prompt.js  tts.js
node-service/test/: glue.test.js
src/: config.py  index.html  node_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  text_utils.py
src/tests/: test_server.py
