[project]
name = "parlor"
version = "0.2.0"
description = "Real-time Bengali voice + vision assistant — browser-facing server that proxies to the Node glue service (Gemma + edge-tts)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "websockets>=16.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
